@@ -42,6 +42,12 @@ typedef enum {
     BACKEND_NM,
 } netdef_backend;
 
+typedef enum {
+    ACCEPT_RA_KERNEL,
+    ACCEPT_RA_ENABLED,
+    ACCEPT_RA_DISABLED,
+} ra_mode;
+
 typedef struct missing_node {
     char* netdef_id;
     yaml_node_t* node;
@@ -64,7 +70,7 @@ typedef struct net_definition {
     gboolean dhcp4;
     gboolean dhcp6;
     char* dhcp_identifier;
-    gboolean accept_ra;
+    ra_mode accept_ra;
     GArray* ip4_addresses;
     GArray* ip6_addresses;
     char* gateway4;
